--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </head>
 <body>
     <div class="container3">
-        <h1>Defuse The Bomb</h1>
+        <h1 class = 'mainHeading'>Defuse The Bomb</h1>
         <div class="container">
             <div>0</div>
             <div>0</div>
@@ -33,11 +33,15 @@
             <button>7</button>
             <button>8</button>
             <button>9</button>
-            <button class="zero">0</button>
+            <button>0</button>
     
         </div>
     
     </div>
-   
+<span  class = 'timer'>Timer: <span></span></span>
+
+
+    <script src="script.js"></script>
+
 </body>
 </html>
